<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocialMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="imagen_warning">Alarma</string>
    <string name="imagen_perfil">Registrar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="tel">Teléfono</string>
    <string name="mail">Email</string>
    <string name="edad">Edad</string>
    <string name="fechanaciomente">Fecha Nac.</string>
    <string name="sexo">Sexo</string>
    <string name="localidad">Lugar de residencia</string>
    <string name="enviando_solicitud">Enviando solicitud . . .</string>
    <string name="internet_error">No exite conexión a internet</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="registrado">Registrado</string>
    <string name="no_registrado">No registrado</string>
    <string name="touch_para_detalle">Tocar para ver detalle</string>
    <string name="desea_enviar_la_solicitud_de_usuario">Desea enviar la solicitud de usuario?</string>

    <string-array name="array_sexo">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

</resources>